--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<h1>
-  {{title}}
-</h1>
+<div>
+  <a routerLink="/test">Test</a>
+  <a routerLink="/auth">Auth</a>
+</div>
+
+<router-outlet></router-outlet>
